/*
 * Teleport
 * Copyright (C) 2025  Gravitational, Inc.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package teleport.desktop.v1;

import "google/protobuf/descriptor.proto";
import "teleport/legacy/client/proto/authservice.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/desktop/v1;tdpbv1";

extend google.protobuf.MessageOptions {
  optional MessageType tdp_type_option = 61111;
}

// Types of messages that TDPB implementations will exchange
enum MessageType {
  MESSAGE_TYPE_UNSPECIFIED = 0;
  MESSAGE_TYPE_PNG_FRAME = 1;
  MESSAGE_TYPE_FASTPATH_PDU = 2;
  MESSAGE_TYPE_RDP_RESPONSE_PDU = 3;
  MESSAGE_TYPE_SYNC_KEYS = 4;
  MESSAGE_TYPE_MOUSE_MOVE = 5;
  MESSAGE_TYPE_MOUSE_BUTTON = 6;
  MESSAGE_TYPE_KEYBOARD_BUTTON = 7;
  MESSAGE_TYPE_ALERT = 8;
  MESSAGE_TYPE_MOUSE_WHEEL = 9;
  MESSAGE_TYPE_CLIPBOARD_DATA = 10;
  MESSAGE_TYPE_MFA = 11;
  MESSAGE_TYPE_SHARED_DIRECTORY_REQUEST = 12;
  MESSAGE_TYPE_SHARED_DIRECTORY_RESPONSE = 13;
  MESSAGE_TYPE_SHARED_DIRECTORY_ANNOUNCE = 14;
  MESSAGE_TYPE_SHARED_DIRECTORY_ACKNOWLEDGE = 15;
  MESSAGE_TYPE_LATENCY_STATS = 16;
  MESSAGE_TYPE_PING = 17;
  MESSAGE_TYPE_CLIENT_HELLO = 18;
  MESSAGE_TYPE_SERVER_HELLO = 19;
  MESSAGE_TYPE_CLIENT_SCREEN_SPEC = 20;
}

// Sent by client to begin a TDPB connection and advertise capabilities.
message ClientHello {
  option (tdp_type_option) = MESSAGE_TYPE_CLIENT_HELLO;
  string username = 1;
  ClientScreenSpec screen_spec = 2;
  uint32 keyboard_layout = 3;
}

// Sent by server in response to a 'Client Hello'. Advertises server capabilities.
message ServerHello {
  ConnectionActivated activation_spec = 1;
  bool clipboard_enabled = 2;
  option (tdp_type_option) = MESSAGE_TYPE_SERVER_HELLO;
}

// Defines the boundaries that PNG frame will update.
// Used for composition on PNG frame messages only.
message Rectangle {
  uint32 left = 1;
  uint32 top = 2;
  uint32 right = 3;
  uint32 bottom = 4;
}

// Contains updated image data to be displayed.
message PNGFrame {
  option (tdp_type_option) = MESSAGE_TYPE_PNG_FRAME;
  Rectangle coordinates = 1;
  bytes data = 2;
}

// Contains a raw RDP FastPath message to by interpreted by the client.
message FastPathPDU {
  option (tdp_type_option) = MESSAGE_TYPE_FASTPATH_PDU;
  bytes pdu = 1;
}

// Contains a raw RDP response PDU to send be interpreted by the server.
message RDPResponsePDU {
  option (tdp_type_option) = MESSAGE_TYPE_RDP_RESPONSE_PDU;
  bytes response = 1;
}

// Internal message sent by the server after establishing a connection
// to the RDP host.
message ConnectionActivated {
  uint32 io_channel_id = 1;
  uint32 user_channel_id = 2;
  uint32 screen_width = 3;
  uint32 screen_height = 4;
}

// Conveys the current state of keyboard buttons with persistent state.
message SyncKeys {
  option (tdp_type_option) = MESSAGE_TYPE_SYNC_KEYS;
  bool scroll_lock_pressed = 1;
  bool num_lock_state = 2;
  bool caps_lock_state = 3;
  bool kana_lock_state = 4;
}

// Represents the current position of the cursor on the client.
message MouseMove {
  option (tdp_type_option) = MESSAGE_TYPE_MOUSE_MOVE;
  uint32 x = 1;
  uint32 y = 2;
}

// Specifies which mount button was pressed.
enum MouseButtonType {
  MOUSE_BUTTON_TYPE_UNSPECIFIED = 0;
  MOUSE_BUTTON_TYPE_LEFT = 1;
  MOUSE_BUTTON_TYPE_MIDDLE = 2;
  MOUSE_BUTTON_TYPE_RIGHT = 3;
}

// Informs the server of a mouse button press.
message MouseButton {
  option (tdp_type_option) = MESSAGE_TYPE_MOUSE_BUTTON;
  MouseButtonType button = 1;
  bool pressed = 2;
}

// Informs the server of a keyboard button press.
message KeyboardButton {
  option (tdp_type_option) = MESSAGE_TYPE_KEYBOARD_BUTTON;
  uint32 key_code = 1;
  bool pressed = 2;
}

// Composed in Client Hello to inform the server of the client's screen size.
// May also be sent during a desktop session as the client resizes its display.
// These mesasages are captured for session recordings in order to replay
// resizing events.
message ClientScreenSpec {
  option (tdp_type_option) = MESSAGE_TYPE_CLIENT_SCREEN_SPEC;
  uint32 width = 1;
  uint32 height = 2;
}

// Severity of an alert contained in an Alert message.
enum AlertSeverity {
  ALERT_SEVERITY_UNSPECIFIED = 0;
  ALERT_SEVERITY_INFO = 1;
  ALERT_SEVERITY_WARNING = 2;
  ALERT_SEVERITY_ERROR = 3;
}

// Represents an Alert to be displayed by the client.
message Alert {
  option (tdp_type_option) = MESSAGE_TYPE_ALERT;
  string message = 1;
  AlertSeverity severity = 2;
}

// Represents the axis on which a scroll wheel acts.
enum MouseWheelAxis {
  MOUSE_WHEEL_AXIS_UNSPECIFIED = 0;
  MOUSE_WHEEL_AXIS_VERTICAL = 1;
  MOUSE_WHEEL_AXIS_HORIZONTAL = 2;
}

// Mouse wheel event
message MouseWheel {
  option (tdp_type_option) = MESSAGE_TYPE_MOUSE_WHEEL;
  MouseWheelAxis axis = 1;
  uint32 delta = 2;
}

// Represents shared clipboard data.
message ClipboardData {
  option (tdp_type_option) = MESSAGE_TYPE_CLIPBOARD_DATA;
  bytes data = 1;
}

// MFA challenge type
enum MFAType {
  MFA_TYPE_UNSPECIFIED = 0;
  MFA_TYPE_WEBAUTHN = 1;
  MFA_TYPE_U2F = 2;
}

// Contains an MFA challenge or response
// The client implicitly expects a non-empty challenge while the server
// expects a non-empty response.
message MFA {
  option (tdp_type_option) = MESSAGE_TYPE_MFA;
  MFAType type = 1;
  proto.MFAAuthenticateChallenge challenge = 2;
  proto.MFAAuthenticateResponse authentication_response = 3;
}

// Sent by client to announce a new shared directory.
message SharedDirectoryAnnounce {
  option (tdp_type_option) = MESSAGE_TYPE_SHARED_DIRECTORY_ANNOUNCE;
  uint32 directory_id = 1;
  string name = 2;
}

// Sent by server to acknowledge a new shared directory.
message SharedDirectoryAcknowledge {
  option (tdp_type_option) = MESSAGE_TYPE_SHARED_DIRECTORY_ACKNOWLEDGE;
  uint32 directory_id = 1;
  uint32 error_code = 2;
}

// Represents an operation on a shared directory.
enum DirectoryOperation {
  DIRECTORY_OPERATION_UNSPECIFIED = 0;
  DIRECTORY_OPERATION_INFO = 1;
  DIRECTORY_OPERATION_CREATE = 2;
  DIRECTORY_OPERATION_DELETE = 3;
  DIRECTORY_OPERATION_LIST = 4;
  DIRECTORY_OPERATION_READ = 5;
  DIRECTORY_OPERATION_WRITE = 6;
  DIRECTORY_OPERATION_MOVE = 7;
  DIRECTORY_OPERATION_TRUNCATE = 8;
  DIRECTORY_OPERATION_ANNOUNCE = 9;
  DIRECTORY_OPERATION_ACKNOWLEDGE = 10;
}

// Contains data necessary for shared directory operations.
// Not all operation types make use of all fields.
message SharedDirectoryRequest {
  option (tdp_type_option) = MESSAGE_TYPE_SHARED_DIRECTORY_REQUEST;
  // Operation type
  DirectoryOperation operation_code = 1;
  // Common fields
  uint32 directory_id = 2;
  uint32 completion_id = 3;
  // Subject path for Info and Move requests.
  string path = 4;
  // Destination path for Move requests.
  string new_path = 9;
  // Specifies file type in CREATE requests.
  uint32 file_type = 5;
  // Specifies offset where the read/write should start
  // in READ and WRITE requests.
  uint64 offset = 6;
  // Requested length to read for READ requests.
  uint32 length = 7;
  // For TRUNCATE requests.
  uint32 end_of_file = 8;
  // Data to be written in WRITE requests.
  bytes data = 10;
  // Defines the shared directory name in
  // ANNOUNCE operations.
  string name = 11;
}

// Contains data necessary for responses to shared directory operations.
// Not all operation types make use of all fields.
message SharedDirectoryResponse {
  option (tdp_type_option) = MESSAGE_TYPE_SHARED_DIRECTORY_RESPONSE;
  // Common response fields
  uint32 completion_id = 1;
  uint32 error_code = 2;
  // Returned FileSystemObject(s) for INFO and LIST responses.
  repeated FileSystemObject fso_list = 3;
  // Data returned in READ responses.
  bytes data = 4;
}

// Represents a file object in a shared directory.
message FileSystemObject {
  uint64 last_modified = 1;
  uint64 size = 2;
  uint32 file_type = 3;
  bool is_empty = 4;
  string path = 5;
}

// Contains latency metrics between the proxy and RDP host
// as well as between the proxy and client.
message LatencyStats {
  option (tdp_type_option) = MESSAGE_TYPE_LATENCY_STATS;
  uint32 client_latency = 1;
  uint32 server_latency = 2;
}

// A ping message used to time latency between the web client and proxy.
message Ping {
  option (tdp_type_option) = MESSAGE_TYPE_PING;
  // UUID is used to correlate message send by proxy and received from the Windows Desktop Service
  bytes uuid = 1;
}
